--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-python-telegram-bot==13.7
-requests==2.28.1
-python-dotenv==1.0.0
-flask==2.0.3
-PyPDF2==3.0.1
+requests==2.31.0
 python-docx==0.8.11
-docx
-telegram
-gtts
+transformers==4.41.0
+torch==2.3.0
+numpy==1.26.0
+python-dateutil==2.8.2
+tqdm==4.66.1
+sentencepiece==0.2.0
+accelerate==0.29.0
+python-telegram-bot==13.7
+python-dotenv==1.0.0
+flask==2.0.3 # may need
+PyPDF2==3.0.1
